--- a/index.html
+++ b/index.html
@@ -73,52 +73,56 @@
     </div>
     <div class="bloco_projetos">
       <h4 class="projetos">Projetos</h4>
-      <div class="blocos">
-        <picture class="icone">
-          <img src="images/graphic-design.png" alt="Foto de ícone" />
-        </picture>
-        <h5 class="titulo_competencias">Graphic Design</h5>
-        <p>
-          Graphic design is a craft where professionals create visual content to
-          communicate messages.
-        </p>
+      <div class="regiao_blocos">
+        <div class="blocos">
+          <picture class="icone">
+            <img src="images/graphic-design.png" alt="Foto de ícone" />
+          </picture>
+          <h5 class="titulo_competencias">Graphic Design</h5>
+          <p>
+            Graphic design is a craft where professionals create visual content
+            to communicate messages.
+          </p>
+        </div>
+        <div class="blocos">
+          <picture class="icone">
+            <img src="images/web-design.png" alt="Foto de ícone" />
+          </picture>
+          <h5 class="titulo_competencias">Web Design</h5>
+          <p>
+            O web design é uma extensão da prática do design gráfico, onde o
+            foco do projeto são web sites.
+          </p>
+        </div>
+        <div class="blocos">
+          <picture class="icone">
+            <img src="images/ui-ux.png" alt="Foto de ícone" />
+          </picture>
+          <h5 class="titulo_competencias">UI/UX Design</h5>
+          <p>
+            O UX designer é o profissional responsável pela aparência e harmonia
+            de uma plataforma digital.
+          </p>
+        </div>
+        <div class="blocos">
+          <picture class="icone">
+            <img src="images/frontend.png" alt="Foto de ícone" />
+          </picture>
+          <h5 class="titulo_competencias">Frontend Development</h5>
+          <p>
+            O Front-end Developer cria interação e experiência do utilizador com
+            scripts incorporados.
+          </p>
+        </div>
       </div>
-      <div class="blocos">
-        <picture class="icone">
-          <img src="images/web-design.png" alt="Foto de ícone" />
-        </picture>
-        <h5 class="titulo_competencias">Web Design</h5>
-        <p>
-          O web design é uma extensão da prática do design gráfico, onde o foco
-          do projeto são web sites.
-        </p>
-      </div>
-      <div class="blocos">
-        <picture class="icone">
-          <img src="images/ui-ux.png" alt="Foto de ícone" />
-        </picture>
-        <h5 class="titulo_competencias">UI/UX Design</h5>
-        <p>
-          O UX designer é o profissional responsável pela estética de uma
-          plataforma digital.
-        </p>
-      </div>
-      <div class="blocos">
-        <picture class="icone">
-          <img src="images/frontend.png" alt="Foto de ícone" />
-        </picture>
-        <h5 class="titulo_competencias">Frontend Development</h5>
-        <p>
-          O Front-end Developer cria interação e experiência do utilizador com
-          scripts incorporados.
-        </p>
-      </div>
-      <div>
+      <div class="regiao_contatos">
         <div class="contatos">
           <h6>Contatos</h6>
-          <p class="quebra_linha branco">.</p>
-          <p class="quebra_linha2 branco">.</p>
-          <p class="quebra_linha3 branco">.</p>
+          <div class="quebra_linha_conjunto">
+            <p class="quebra_linha branco">.</p>
+            <p class="quebra_linha2 branco">.</p>
+            <p class="quebra_linha3 branco">.</p>
+          </div>
           <p class="branco2">E-mail: enzo@example.designer</p>
           <p class="branco2">Fone: +55 (11) 991 002 003</p>
         </div>
@@ -136,10 +140,10 @@
             <img src="images/linkedin-icon.png" />
           </div>
           <h6 class="email">enzo@example.designer</h6>
-          <p class="opções">Home</p>
-          <p class="opções">Service</p>
-          <p class="opções">Portifolio</p>
-          <p class="opções">Contact Us</p>
+          <p class="opcoes">Home</p>
+          <p class="opcoes">Service</p>
+          <p class="opcoes">Portifolio</p>
+          <p class="opcoes">Contact Us</p>
           <div class="ultimo">
             <p class="frase">
               Template Designed and Developed by <spam>Uldeck</spam>
